# odoo_developer_kit

./: .gitignore  404.html  Cargo.toml  README.md  index.html  install.sh  mkdocs.yml  sitemap.xml
.github/workflows/: docs.yml  release-check.yml  release.yml  test.yml
assets/stylesheets/: extra.css
create/: index.html
development/: index.html
docker/: index.html
docs/: create.md  development.md  docker.md  doctor.md  editors.md  index.md  installation.md  project-structure.md  publishing.md  quickstart.md  release.md  troubleshooting.md  upgrade.md
docs/assets/stylesheets/: extra.css
doctor/: index.html
editors/: index.html
installation/: index.html
project-structure/: index.html
publishing/: index.html
quickstart/: index.html
release/: index.html
search/: search_index.json
src/: cli.rs  error.rs  lib.rs  main.rs  upgrade.rs
src/create/: git.rs  mod.rs  project.rs  template.rs
src/doctor/: docker.rs  mod.rs  postgres.rs  pycharm.rs  python.rs  uv.rs  vscode.rs  wkhtmltopdf.rs
src/utils/: command.rs  platform.rs
templates/: Dockerfile.tera  README.md.tera  compose.yaml.tera  env.tera  gitignore.tera  odoo.conf.tera  pyproject.toml.tera
templates/idea/: misc.xml.tera  module.iml.tera
templates/idea/runConfigurations/: odoo.xml.tera
templates/vscode/: launch.json.tera
tests/: cli_tests.rs  create_tests.rs  doctor_tests.rs
troubleshooting/: index.html
upgrade/: index.html
