[workspace]
members = ["."]
resolver = "2"

[package]
name = "odoo-developer-kit"
version = "0.1.0"
edition = "2024"
description = "Odoo Developer Kit: a Flutter-like CLI for Odoo developers."
license = "Apache-2.0"
repository = "https://github.com/odoo-developer-kit/odoo-developer-kit"
homepage = "https://odk.dev"
readme = "README.md"
keywords = ["odoo", "cli", "developer-tools", "uv"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "odk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
thiserror = "2.0"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
