[workspace]
members = ["."]
resolver = "2"

[package]
name = "odoo-developer-kit"
version = "0.1.0"
edition = "2024"
description = "Odoo Developer Kit: a Flutter-like CLI for Odoo developers."
license = "Apache-2.0"
repository = "https://github.com/HanZawNyein/odoo_developer_kit"
homepage = "https://hanzawnyein.github.io/odoo_developer_kit/"
readme = "README.md"
keywords = ["odoo", "cli", "developer-tools", "uv"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "odk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
thiserror = "2.0"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
